--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,13 +1,20 @@
-name: CD - Déploiement sur GitHub Pages
+name: CD - Déploiement
 on:
   push:
     branches: [ "main" ]
+
+  workflow_dispatch:
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: Linux
     steps:
       - name: Récupération du code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Deploiment en local sur Linux
+        run: |
+          echo "Deploiment du site dans /var/www/html"
+          rsync -av --delete ./ /var/www/html/
 
       - name: Déploiement vers GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
