--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Vérification syntaxe HTML
         uses: Cyb3r-Jak3/html5validator-action@v0.6
         with:
-          root: .
+          user: .
