--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Deploiment en local sur Linux
         run: |
           echo "Deploiment du site dans /var/www/html"
-          sudo rsync -av --delete ./ /var/www/html/
+          rsync -av --delete ./ /var/www/html/
 
       - name: Déploiement vers GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
